Make the repository default-local-path configurable through ansible

--- a/templates/phabricator.conf.j2
+++ b/templates/phabricator.conf.j2
@@ -2,7 +2,7 @@ server {
   server_name {{ server_url }};
   root        {{ web_root }}/phabricator/webroot;
 
-  client_max_body_size 32M;
+  client_max_body_size {{ max_post_size }};
 
   location / {
     index index.php;
